# trust-chain-checker

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.txt
src/: artifacts.rs  checker.rs  claim.rs  err.rs  eval.rs  gpg.rs  main.rs  util.rs
